objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GoLiveDate__c</fullName>
        <formula>Project__r.Accel_Go_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GoLiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oppty_Close_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductFamily</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>This field pulls in the value of the product&apos;s Accel Name field. It is used in email alerts.</description>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProjectID</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>